[package]
name = "webkit2gtk-rs-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gdk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gdk4"}
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4"}
webkit2gtk = { git = "https://gitlab.gnome.org/World/Rust/webkit2gtk5-rs", package = "webkit2gtk5", version = "0.15.1", features = [ "v2_38" ] }
env_logger = "0.10.0"
log = "0.4.17"
